# fastboot-flasher

./: .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  README.md  REVIEW.md
.commandcode/taste/: taste.md
.github/workflows/: build.yml
fastboot-flasher/: Cargo.toml
fastboot-flasher-core/: Cargo.toml
fastboot-flasher-core/src/: cli.rs  connect.rs  device.rs  device_info.rs  flash.rs  gsi.rs  lib.rs  manual.rs  plan.rs  progress.rs
fastboot-flasher-core/src/format/: ext4.rs  f2fs.rs  mod.rs  tools.rs  wipe.rs
fastboot-flasher-gui/: index.html  package.json
fastboot-flasher-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
fastboot-flasher-gui/src-tauri/capabilities/: default.json
fastboot-flasher-gui/src-tauri/src/: gsi_worker.rs  lib.rs  main.rs
fastboot-flasher-gui/src/components/extra-tab/: GsiFlasher.tsx
fastboot-flasher-gui/src/components/flash/: FlashDialog.tsx
fastboot-flasher-gui/src/components/layout/: AppLayout.tsx
fastboot-flasher-gui/src/components/main-tab/: FlashFab.tsx  ScatterPicker.tsx
fastboot-flasher-gui/src/components/menu-tab/: DataSection.tsx  RebootSection.tsx
fastboot-flasher-gui/src/lib/: flash-mode.ts
fastboot-flasher-gui/src/types/: api.ts
fastboot-flasher-ui/: index.html  package.json  vite.config.ts
fastboot-flasher-ui/src/: App.tsx  index.css  main.tsx
fastboot-flasher-ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
fastboot-flasher-ui/src-tauri/capabilities/: default.json
fastboot-flasher-ui/src-tauri/src/: gsi_worker.rs  lib.rs  main.rs
fastboot-flasher-ui/src/components/flash/: FlashDialog.tsx  ForceFastbootDialog.tsx
fastboot-flasher-ui/src/components/layout/: AppLayout.tsx
fastboot-flasher-ui/src/components/main-tab/: FlashOptions.tsx  PartitionTable.tsx
fastboot-flasher-ui/src/components/menu-tab/: LogSection.tsx  RebootSection.tsx  SectionCard.tsx  SlotSection.tsx
fastboot-flasher-ui/src/components/ui/: badge.tsx  checkbox.tsx  dialog.tsx  input.tsx  table.tsx
fastboot-flasher-ui/src/hooks/: useDevice.ts  useFlashProgress.tsx  useForceFastboot.tsx
fastboot-flasher-ui/src/types/: api.ts
fastboot-flasher/assets/: empty_vbmeta.img
fastboot-flasher/src/: cli.rs  device.rs  gsi.rs  lib.rs  main.rs  manual.rs  plan.rs  progress.rs
fastboot-flasher/src/format/: ext4.rs  f2fs.rs  mod.rs  tools.rs  wipe.rs
fastboot-flasher/tests/: cli.rs
fastboot-rs/: Cargo.toml  README.md
fastboot-rs/examples/: asparseimg.rs  fastbootrs.rs
fastboot-rs/src/: executor.rs  image.rs  lib.rs  operation.rs  protocol.rs
fastboot-rs/src/sparse/: mod.rs  split.rs
fastboot-rs/src/transport/: adbwinapi.rs  mod.rs  nusb.rs
fastboot-rs/tests/: image_operation.rs  protocol_helpers.rs
force-fastboot/: Cargo.toml
force-fastboot/src/: lib.rs  main.rs  permissions.rs  protocol.rs  serial.rs  spinner.rs  udev.rs
mtk-scatter-parser/: Cargo.toml
mtk-scatter-parser/src/: lib.rs  main.rs
mtk-scatter-parser/tests/: cli.rs  core.rs
mtk-scatter-parser/tests/fixtures/realish_clean_flash/: MT6789_Android_scatter.xml  boot_a.img  boot_b.img  dtbo_a.img  dtbo_b.img  vbmeta_a.img  vbmeta_b.img
pawflash/: Cargo.toml
pawflash-cli/: Cargo.toml
pawflash-cli/src/: cli_app.rs  main.rs  progress.rs  ui.rs
pawflash-gui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
pawflash-gui/src/: App.tsx  index.css
pawflash-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
pawflash-gui/src-tauri/capabilities/: default.json
pawflash-gui/src-tauri/src/: gsi_worker.rs  lib.rs  main.rs
pawflash-gui/src/components/extra-tab/: ExtraTools.tsx  FastbootVars.tsx  GsiFlasher.tsx  ManualFlash.tsx
pawflash-gui/src/components/flash/: FlashDialog.tsx  FlashPlanConfirmDialog.tsx  ForceFastbootDialog.tsx
pawflash-gui/src/components/layout/: AppLayout.tsx
pawflash-gui/src/components/main-tab/: FlashFab.tsx  FlashOptions.tsx  PartitionTable.tsx  ScatterPicker.tsx
pawflash-gui/src/components/menu-tab/: BootloaderSection.tsx  DataSection.tsx  DeviceSection.tsx  LogSection.tsx  RebootSection.tsx  SectionCard.tsx  SlotSection.tsx
pawflash-gui/src/components/shared/: ConfirmDialog.tsx  dialogBehavior.ts
pawflash-gui/src/components/tabs/: ExtraTab.tsx  MainTab.tsx  MenuTab.tsx
pawflash-gui/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  progress.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx
pawflash-gui/src/hooks/: useDevice.ts  useFlashProgress.tsx  useForceFastboot.tsx
pawflash-gui/src/lib/: flash-mode.ts  format.ts
pawflash-gui/src/types/: api.ts
pawflash/src/: cli.rs  connect.rs  device.rs  device_info.rs  domain.rs  execution.rs  flash.rs  gsi.rs  lib.rs  manual.rs  plan.rs  progress.rs  workflow.rs
pawflash/src/format/: ext4.rs  mod.rs  tools.rs  wipe.rs
terminal-output/: Cargo.toml
terminal-output/src/: chrome.rs  lib.rs  progress.rs  spinner.rs  table.rs
