[package]
name = "fastboot-flasher"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastboot_flasher"
path = "src/lib.rs"

[[bin]]
name = "fastboot-flasher"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
fastboot-rs = { path = "../fastboot-rs" }
force-fastboot = { path = "../force-fastboot" }
indicatif = "0.17"
inquire = "0.9"
mtk-scatter-parser = { path = "../mtk-scatter-parser" }
serde_json = "1"
terminal-output = { path = "../terminal-output" }
tempfile = "3"
tokio = { version = "1.43.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }

[dev-dependencies]
