[package]
name = "fastboot-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Reusable fastboot protocol, transport, and image preparation helpers"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "fastboot_rs"
path = "src/lib.rs"

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
nusb = { version = "0.2.3" }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.3"
tracing = "0.1.40"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[features]
default = ["nusb/tokio"]

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.43.1", features = ["full"] }
tracing-subscriber = "0.3.18"
