[package]
name = "force-fastboot"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serialport = "4"
terminal-output = { path = "../terminal-output" }
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
