[package]
name = "mtk-scatter-parser"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "mtk_scatter_parser"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
terminal-output = { path = "../terminal-output" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
