[package]
name = "pawflash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
pawflash = { package = "pawflash-core", path = "../pawflash" }
serde_json = "1"
terminal-output = { path = "../terminal-output" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
