[package]
name = "fastboot-flasher-ui"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "fastboot_flasher_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
fastboot-flasher = { path = "../../fastboot-flasher" }
fastboot-rs = { path = "../../fastboot-rs" }
mtk-scatter-parser = { path = "../../mtk-scatter-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "process", "sync"] }
anyhow = "1"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
