[package]
name = "pawflash-gui"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "pawflash_gui_lib"
crate-type = ["lib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
pawflash = { path = "../../pawflash" }
fastboot-rs = { path = "../../fastboot-rs" }
mtk-scatter-parser = { path = "../../mtk-scatter-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "process", "sync"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
